infra/backend-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-sticky-sessions
  namespace: default
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: cable-force-route
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: "cable-force-sid"
        # Adding a bit more TTL to ensure it's set by Envoy
        attributes:
          "Max-Age": "3600"
          "Path": "/"
